--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="card">
             <header>
                 <div class="profile-pic">
-                    <img src="/minerva.jpg" alt="">
+                    <img src="minerva.jpg" alt="">
                 </div>
                 <h1>@Minerva</h1>
                 <p class="bio">SERVER OWNER</p>
