--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linktree</title>
     <link rel="stylesheet" href="style.css">
-</head>
+
+</head> -->
 <body>
     <div class="container">
         <div class="card">
@@ -34,8 +35,12 @@
                     <span>Facebook</span>
                 </a>
                 <a href="https://www.google.com/maps/place/Kejaksaan+Tinggi+Sulawesi+Tengah/@-0.8896549,119.8684725,17z/data=!3m1!4b1!4m6!3m5!1s0x2d8bedd1f2959d1f:0x9770a23c313f98a4!8m2!3d-0.8896549!4d119.8710474!16s%2Fg%2F11bc7pt_wn?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoASAFQAw%3D%3D" class="link-button maps">
-                    <i class="fab fa-instagram"></i>
+                    <i class="bi bi-geo-alt-fill"></i>
                     <span>Maps</span>
+                </a>
+                <a href="https://www.linkedin.com/in/achmad-risky-1b5467325/" class="link-button linktree">
+                    <i class="bi bi-linkedin"></i>
+                    <span>Linktree</span>
                 </a>
             </section>
         </div>
