--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Linktree</title>
     <link rel="stylesheet" href="style.css">
 
-</head> -->
+</head>
 <body>
     <div class="container">
         <div class="card">
